# AFNetCrawler

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/afnetcrawler/: crawler.py
tests/: test_crawler.py
